<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}">
<!-- not use now
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:id="@+id/bt_start"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:id="@+id/bt_stop"
        android:layout_alignBottom="@+id/bt_start"
        android:layout_toEndOf="@+id/bt_start"
        android:layout_marginEnd="5dp"
        android:visibility="gone"/>
-->

    <Button
        android:id="@+id/bt_listener"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/label_enable_listener"
        android:background="@drawable/bt_background"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="#88888888"/>

    <TextView
        android:id="@+id/instruction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:layout_below="@id/bt_listener"
        android:layout_alignStart="@id/bt_listener"
        android:layout_alignEnd="@id/bt_listener"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/instruction_label">

        <!-- Row 1-->
        <TextView
            android:id="@+id/tv_floatview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_permit_float"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />

        <CheckBox
            android:id="@+id/cb_floatview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_floatview"
            android:layout_alignTop="@id/tv_floatview"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:checked="@bool/default_open_float_view"
            />
        <!-- Row 2-->
        <TextView
            android:id="@+id/tv_auto_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_floatview"
            android:text="@string/label_auto_open_msg"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />

        <CheckBox
            android:id="@+id/cb_auto_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_floatview"
            android:layout_toRightOf="@id/tv_auto_open"
            android:layout_alignTop="@id/tv_auto_open"
            android:layout_marginEnd="5dp"
            android:layout_alignStart="@id/cb_floatview"
            android:checked="@bool/default_auto_open"
            />
    </RelativeLayout>
</RelativeLayout>
